2009-06-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	Refuse to commit EditForm if nothing has been changed.

2009-06-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/field.py:
	Document changed behavior of virtual column permission checks.

2009-06-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/_grid.py:
	* lib/pytis/form/inputfield.py:
	* lib/pytis/form/list.py:
	* lib/pytis/output/flibdata.py:
	Add missing secure display checks.

2009-06-23  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Fix processing of single column rights in genmenu.

2009-06-19  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/extensions/www.py:
	* lib/pytis/form/_grid.py:
	* lib/pytis/form/inputfield.py:
	* lib/pytis/form/list.py:
	* lib/pytis/presentation/field.py:
	First attempt to hide secret values.

2009-06-17  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/access.py:
	* lib/pytis/data/types_.py:
	* lib/pytis/presentation/field.py:
	Don't use SecretValue anymore.

2009-06-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Forbid incremental search in secret columns.

2009-06-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/inputfield.py:
	* lib/pytis/util/configuration.py:
	Indicate secret fields with a special background color.

2009-06-09  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	* lib/pytis/form/list.py:
	Update only changed fields after editing a row in a form.

2009-06-08  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	Don't offer sorting of secret columns.

2009-06-08  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/search.py:
	Exclude secret columns from SF dialogs.

2009-06-08  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/application.py:
	* lib/pytis/form/form.py:
	Replace form-init-error by Form.InitError.

2009-06-04  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py:
	Add column information to menu and rights administration forms.
